# picoMIDI

./: CMakeLists.txt
inc/: gpioDeclaration.h  gpioInit.h  gpioPico.h  main.h
src/: gpioDeclaration.c  gpioPico.cpp  main.c  main.cpp
